syntax  = "proto3";

package chatCliente;

message MensajeRequest {
    int64 a = 1; // 1 byte tamaño de valor
    int64 b = 2;  // = no asigna valor sino tamaño
}

message MensajeRespuesta {
    int64 resultado = 1;
}

service ServicioNuevo {
    rpc FuncionServer(MensajeRequest) returns (MensajeRespuesta);
}

// luego se compila con comando "protoc --proto..."